chore: update air configuration

--- a/.air.toml
+++ b/.air.toml
@@ -6,13 +6,13 @@ tmp_dir = "tmp"
 args_bin = []
 bin = "./tmp/main"
 cmd = "go build -gcflags='all=-N -l' -o ./tmp/main ./cmd/main.go"
-delay = 1000
+full_bin = "dlv exec --continue --accept-multiclient --listen=:9080 --headless=true --api-version=2 --log ./tmp/main"
+delay = 4000
 exclude_dir = ["assets", "tmp", "vendor", "testdata"]
 exclude_file = []
 exclude_regex = ["_test.go"]
 exclude_unchanged = false
 follow_symlink = false
-full_bin = ""
 include_dir = []
 include_ext = ["go", "tpl", "tmpl", "html"]
 kill_delay = "0s"
